tests/snapshots/tokenize__function_pointer_struct.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(add) at 1:5\n( at 1:8\nint at 1:9\nIdentifier(a) at 1:13\n, at 1:14\nint at 1:16\nIdentifier(b) at 1:20\n) at 1:21\n{ at 1:23\nreturn at 2:5\nIdentifier(a) at 2:12\n+ at 2:14\nIdentifier(b) at 2:16\n; at 2:17\n} at 3:1\nstruct at 5:1\nIdentifier(Ops) at 5:8\n{ at 5:12\nint at 6:5\n( at 6:9\n* at 6:10\nIdentifier(op) at 6:11\n) at 6:13\n( at 6:14\nint at 6:15\n, at 6:18\nint at 6:20\n) at 6:23\n; at 6:24\n} at 7:1\n; at 7:2\nint at 9:1\nIdentifier(main) at 9:5\n( at 9:9\n) at 9:10\n{ at 9:12\nstruct at 10:5\nIdentifier(Ops) at 10:12\nIdentifier(ops) at 10:16\n= at 10:20\n{ at 10:22\nIdentifier(add) at 10:24\n} at 10:28\n; at 10:29\nif at 12:5\n( at 12:8\nIdentifier(ops) at 12:9\n. at 12:12\nIdentifier(op) at 12:13\n( at 12:15\nIntLiteral(2, None) at 12:16\n, at 12:17\nIntLiteral(3, None) at 12:19\n) at 12:20\n!= at 12:22\nIntLiteral(5, None) at 12:25\n) at 12:26\n{ at 12:28\nreturn at 13:9\nIntLiteral(1, None) at 13:16\n; at 13:17\n} at 14:5\nreturn at 16:5\nIntLiteral(0, None) at 16:12\n; at 16:13\n} at 17:1\nEOF at 18:1\n"
stderr: ""
status: 0
