tests/snapshots/tokenize__generic.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "void at 3:1\nIdentifier(assert) at 3:6\n( at 3:12\nint at 3:13\nIdentifier(expected) at 3:17\n, at 3:25\nint at 3:27\nIdentifier(actual) at 3:31\n, at 3:37\nchar at 3:39\n* at 3:44\nIdentifier(code) at 3:45\n) at 3:49\n; at 3:50\nint at 4:1\nIdentifier(printf) at 4:5\n( at 4:11\nchar at 4:12\n* at 4:17\nIdentifier(fmt) at 4:18\n, at 4:21\n... at 4:23\n) at 4:26\n; at 4:27\nint at 5:1\nIdentifier(sprintf) at 5:5\n( at 5:12\nchar at 5:13\n* at 5:18\nIdentifier(buf) at 5:19\n, at 5:22\nchar at 5:24\n* at 5:29\nIdentifier(fmt) at 5:30\n, at 5:33\n... at 5:35\n) at 5:38\n; at 5:39\nint at 6:1\nIdentifier(vsprintf) at 6:5\n( at 6:13\nchar at 6:14\n* at 6:19\nIdentifier(buf) at 6:20\n, at 6:23\nchar at 6:25\n* at 6:30\nIdentifier(fmt) at 6:31\n, at 6:34\nvoid at 6:36\n* at 6:41\nIdentifier(ap) at 6:42\n) at 6:44\n; at 6:45\nint at 7:1\nIdentifier(strcmp) at 7:5\n( at 7:11\nchar at 7:12\n* at 7:17\nIdentifier(p) at 7:18\n, at 7:19\nchar at 7:21\n* at 7:26\nIdentifier(q) at 7:27\n) at 7:28\n; at 7:29\nint at 8:1\nIdentifier(strncmp) at 8:5\n( at 8:12\nchar at 8:13\n* at 8:18\nIdentifier(p) at 8:19\n, at 8:20\nchar at 8:22\n* at 8:27\nIdentifier(q) at 8:28\n, at 8:29\nlong at 8:31\nIdentifier(n) at 8:36\n) at 8:37\n; at 8:38\nint at 9:1\nIdentifier(memcmp) at 9:5\n( at 9:11\nchar at 9:12\n* at 9:17\nIdentifier(p) at 9:18\n, at 9:19\nchar at 9:21\n* at 9:26\nIdentifier(q) at 9:27\n, at 9:28\nlong at 9:30\nIdentifier(n) at 9:35\n) at 9:36\n; at 9:37\nvoid at 10:1\nIdentifier(exit) at 10:6\n( at 10:10\nint at 10:11\nIdentifier(n) at 10:15\n) at 10:16\n; at 10:17\nlong at 11:1\nIdentifier(strlen) at 11:6\n( at 11:12\nchar at 11:13\n* at 11:18\nIdentifier(s) at 11:19\n) at 11:20\n; at 11:21\nvoid at 12:1\n* at 12:6\nIdentifier(memcpy) at 12:7\n( at 12:13\nvoid at 12:14\n* at 12:19\nIdentifier(dest) at 12:20\n, at 12:24\nvoid at 12:26\n* at 12:31\nIdentifier(src) at 12:32\n, at 12:35\nlong at 12:37\nIdentifier(n) at 12:42\n) at 12:43\n; at 12:44\nvoid at 13:1\n* at 13:6\nIdentifier(memset) at 13:7\n( at 13:13\nvoid at 13:14\n* at 13:19\nIdentifier(s) at 13:20\n, at 13:21\nint at 13:23\nIdentifier(c) at 13:27\n, at 13:28\nlong at 13:30\nIdentifier(n) at 13:35\n) at 13:36\n; at 13:37\nvoid at 16:1\nIdentifier(assert) at 16:6\n( at 16:12\nint at 16:13\nIdentifier(expected) at 16:17\n, at 16:25\nint at 16:27\nIdentifier(actual) at 16:31\n, at 16:37\nchar at 16:39\n* at 16:44\nIdentifier(code) at 16:45\n) at 16:49\n{ at 16:51\nif at 17:3\n( at 17:6\nIdentifier(expected) at 17:7\n== at 17:16\nIdentifier(actual) at 17:19\n) at 17:25\n{ at 17:27\nIdentifier(printf) at 18:5\n( at 18:11\nStringLiteral(\"%s => %d\n\") at 18:12\n, at 18:24\nIdentifier(code) at 18:26\n, at 18:30\nIdentifier(actual) at 18:32\n) at 18:38\n; at 18:39\n} at 19:3\nelse at 19:5\n{ at 19:10\nIdentifier(printf) at 20:5\n( at 20:11\nStringLiteral(\"%s => %d expected but got %d\n\") at 20:12\n, at 20:44\nIdentifier(code) at 20:46\n, at 20:50\nIdentifier(expected) at 20:52\n, at 20:60\nIdentifier(actual) at 20:62\n) at 20:68\n; at 20:69\nIdentifier(exit) at 21:5\n( at 21:9\nIntLiteral(1, None) at 21:10\n) at 21:11\n; at 21:12\n} at 22:3\n} at 23:1\nint at 25:1\nIdentifier(main) at 25:5\n( at 25:9\n) at 25:10\n{ at 25:12\nIdentifier(assert) at 26:3\n( at 26:9\nIntLiteral(1, None) at 26:10\n, at 26:11\nIdentifier(_Generic) at 26:13\n( at 26:21\nFloatLiteral(100, None) at 26:22\n, at 26:27\ndouble at 26:29\n: at 26:35\nIntLiteral(1, None) at 26:37\n, at 26:38\nint at 26:40\n* at 26:44\n: at 26:45\nIntLiteral(2, None) at 26:47\n, at 26:48\nint at 26:50\n: at 26:53\nIntLiteral(3, None) at 26:55\n, at 26:56\nfloat at 26:58\n: at 26:63\nIntLiteral(4, None) at 26:65\n) at 26:66\n, at 26:67\nStringLiteral(\"_Generic(100.0, double: 1, int *: 2, int: 3, float: 4)\") at 26:69\n) at 26:125\n; at 26:126\nIdentifier(assert) at 27:3\n( at 27:9\nIntLiteral(2, None) at 27:10\n, at 27:11\nIdentifier(_Generic) at 27:13\n( at 27:21\n( at 27:22\nint at 27:23\n* at 27:27\n) at 27:28\nIntLiteral(0, None) at 27:29\n, at 27:30\ndouble at 27:32\n: at 27:38\nIntLiteral(1, None) at 27:40\n, at 27:41\nint at 27:43\n* at 27:47\n: at 27:48\nIntLiteral(2, None) at 27:50\n, at 27:51\nint at 27:53\n: at 27:56\nIntLiteral(3, None) at 27:58\n, at 27:59\nfloat at 27:61\n: at 27:66\nIntLiteral(4, None) at 27:68\n) at 27:69\n, at 27:70\nStringLiteral(\"_Generic((int *)0, double: 1, int *: 2, int: 3, float: 4)\") at 27:72\n) at 27:131\n; at 27:132\nIdentifier(assert) at 28:3\n( at 28:9\nIntLiteral(2, None) at 28:10\n, at 28:11\nIdentifier(_Generic) at 28:13\n( at 28:21\n( at 28:22\nint at 28:23\n[ at 28:26\nIntLiteral(3, None) at 28:27\n] at 28:28\n) at 28:29\n{ at 28:30\n} at 28:31\n, at 28:32\ndouble at 28:34\n: at 28:40\nIntLiteral(1, None) at 28:42\n, at 28:43\nint at 28:45\n* at 28:49\n: at 28:50\nIntLiteral(2, None) at 28:52\n, at 28:53\nint at 28:55\n: at 28:58\nIntLiteral(3, None) at 28:60\n, at 28:61\nfloat at 28:63\n: at 28:68\nIntLiteral(4, None) at 28:70\n) at 28:71\n, at 28:72\nStringLiteral(\"_Generic((int[3]){}, double: 1, int *: 2, int: 3, float: 4)\") at 28:74\n) at 28:135\n; at 28:136\nIdentifier(assert) at 29:3\n( at 29:9\nIntLiteral(3, None) at 29:10\n, at 29:11\nIdentifier(_Generic) at 29:13\n( at 29:21\nIntLiteral(100, None) at 29:22\n, at 29:25\ndouble at 29:27\n: at 29:33\nIntLiteral(1, None) at 29:35\n, at 29:36\nint at 29:38\n* at 29:42\n: at 29:43\nIntLiteral(2, None) at 29:45\n, at 29:46\nint at 29:48\n: at 29:51\nIntLiteral(3, None) at 29:53\n, at 29:54\nfloat at 29:56\n: at 29:61\nIntLiteral(4, None) at 29:63\n) at 29:64\n, at 29:65\nStringLiteral(\"_Generic(100, double: 1, int *: 2, int: 3, float: 4)\") at 29:67\n) at 29:121\n; at 29:122\nIdentifier(assert) at 30:3\n( at 30:9\nIntLiteral(4, None) at 30:10\n, at 30:11\nIdentifier(_Generic) at 30:13\n( at 30:21\nFloatLiteral(100, Float) at 30:22\n, at 30:26\ndouble at 30:28\n: at 30:34\nIntLiteral(1, None) at 30:36\n, at 30:37\nint at 30:39\n* at 30:43\n: at 30:44\nIntLiteral(2, None) at 30:46\n, at 30:47\nint at 30:49\n: at 30:52\nIntLiteral(3, None) at 30:54\n, at 30:55\nfloat at 30:57\n: at 30:62\nIntLiteral(4, None) at 30:64\n) at 30:65\n, at 30:66\nStringLiteral(\"_Generic(100f, double: 1, int *: 2, int: 3, float: 4)\") at 30:68\n) at 30:123\n; at 30:124\nIdentifier(printf) at 32:3\n( at 32:9\nStringLiteral(\"OK\n\") at 32:10\n) at 32:16\n; at 32:17\nreturn at 33:3\nIntLiteral(0, None) at 33:10\n; at 33:11\n} at 34:1\nEOF at 35:1\n"
stderr: ""
status: 0
