tests/snapshots/tokenize__global_modify.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 3:1\nIdentifier(counter) at 3:5\n= at 3:13\nIntLiteral(5, None) at 3:15\n; at 3:16\nint at 5:1\nIdentifier(main) at 5:5\n( at 5:9\n) at 5:10\n{ at 5:12\nIdentifier(counter) at 6:5\n= at 6:13\nIdentifier(counter) at 6:15\n+ at 6:23\nIntLiteral(10, None) at 6:25\n; at 6:27\nIdentifier(counter) at 7:5\n++ at 7:12\n; at 7:14\nreturn at 8:5\nIdentifier(counter) at 8:12\n; at 8:19\n} at 9:1\nEOF at 10:1\n"
stderr: ""
status: 0
