tests/snapshots/tokenize__global_uninit.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 3:1\nIdentifier(x) at 3:5\n; at 3:6\nint at 5:1\nIdentifier(main) at 5:5\n( at 5:9\n) at 5:10\n{ at 5:12\nIdentifier(x) at 6:5\n= at 6:7\nIntLiteral(42, None) at 6:9\n; at 6:11\nreturn at 7:5\nIdentifier(x) at 7:12\n; at 7:13\n} at 8:1\nEOF at 9:1\n"
stderr: ""
status: 0
