tests/snapshots/tokenize__goto_backward.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 2:1\nIdentifier(main) at 2:5\n( at 2:9\n) at 2:10\n{ at 2:12\nint at 3:5\nIdentifier(x) at 3:9\n= at 3:11\nIntLiteral(0) at 3:13\n; at 3:14\nIdentifier(loop) at 4:1\n: at 4:5\nIdentifier(x) at 5:5\n= at 5:7\nIdentifier(x) at 5:9\n+ at 5:11\nIntLiteral(1) at 5:13\n; at 5:14\nif at 6:5\n( at 6:8\nIdentifier(x) at 6:9\n< at 6:11\nIntLiteral(5) at 6:13\n) at 6:14\n{ at 6:16\ngoto at 7:9\nIdentifier(loop) at 7:14\n; at 7:18\n} at 8:5\nreturn at 9:5\nIdentifier(x) at 9:12\n; at 9:13\n} at 10:1\nEOF at 11:1\n"
stderr: ""
status: 0
