tests/snapshots/tokenize__goto_forward.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 2:1\nIdentifier(main) at 2:5\n( at 2:9\n) at 2:10\n{ at 2:12\nint at 3:5\nIdentifier(x) at 3:9\n= at 3:11\nIntLiteral(0) at 3:13\n; at 3:14\ngoto at 4:5\nIdentifier(skip) at 4:10\n; at 4:14\nIdentifier(x) at 5:5\n= at 5:7\nIntLiteral(99) at 5:9\n; at 5:11\nIdentifier(skip) at 6:1\n: at 6:5\nreturn at 7:5\nIdentifier(x) at 7:12\n; at 7:13\n} at 8:1\nEOF at 9:1\n"
stderr: ""
status: 0
