tests/snapshots/tokenize__goto_multiple.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 2:1\nIdentifier(main) at 2:5\n( at 2:9\n) at 2:10\n{ at 2:12\nint at 3:5\nIdentifier(x) at 3:9\n= at 3:11\nIntLiteral(0) at 3:13\n; at 3:14\ngoto at 4:5\nIdentifier(second) at 4:10\n; at 4:16\nIdentifier(first) at 5:1\n: at 5:6\nIdentifier(x) at 6:5\n= at 6:7\nIdentifier(x) at 6:9\n+ at 6:11\nIntLiteral(10) at 6:13\n; at 6:15\ngoto at 7:5\nIdentifier(end) at 7:10\n; at 7:13\nIdentifier(second) at 8:1\n: at 8:7\nIdentifier(x) at 9:5\n= at 9:7\nIdentifier(x) at 9:9\n+ at 9:11\nIntLiteral(5) at 9:13\n; at 9:14\ngoto at 10:5\nIdentifier(first) at 10:10\n; at 10:15\nIdentifier(end) at 11:1\n: at 11:4\nreturn at 12:5\nIdentifier(x) at 12:12\n; at 12:13\n} at 13:1\nEOF at 14:1\n"
stderr: ""
status: 0
