tests/snapshots/tokenize__if_defined.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 3:1\nIdentifier(main) at 3:5\n( at 3:9\n) at 3:10\n{ at 3:12\nint at 4:5\nIdentifier(result) at 4:9\n= at 4:16\nIntLiteral(0) at 4:18\n; at 4:19\nIdentifier(result) at 6:5\n= at 6:12\nIdentifier(result) at 6:14\n+ at 6:21\nIntLiteral(10) at 6:23\n; at 6:25\nIdentifier(result) at 8:5\n= at 8:12\nIdentifier(result) at 8:14\n+ at 8:21\nIntLiteral(20) at 8:23\n; at 8:25\nIdentifier(result) at 11:5\n= at 11:12\nIdentifier(result) at 11:14\n+ at 11:21\nIntLiteral(5) at 11:23\n; at 11:24\nreturn at 13:5\nIdentifier(result) at 13:12\n; at 13:18\n} at 14:1\nEOF at 15:1\n"
stderr: ""
status: 0
